--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "fuma-editor"
+name = "fumaedit"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 crossterm = "0.29.0"
 regex = "1.11.1"
+dirs = "6.0.0"
